--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,6 +68,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
+            android:textColor="@color/white"
             android:background="?selectableItemBackgroundBorderless"
             android:id="@+id/tvActMainTranslation"
             android:layout_width="wrap_content"
@@ -174,6 +175,18 @@
             app:layout_constraintStart_toStartOf="parent"
             app:tint="?colorOnBackground"
             tools:ignore="ContentDescription" />
+
+        <ImageView
+            android:background="?selectableItemBackgroundBorderless"
+            android:id="@+id/ivActMainShareApp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="16dp"
+            android:padding="16dp"
+            android:src="@drawable/ic_baseline_share_24"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:tint="?colorOnBackground" />
 
         <ProgressBar
             tools:visibility="visible"
